feat: horizontally scrollable link graph

--- a/apps/webapp/app/globals.css
+++ b/apps/webapp/app/globals.css
@@ -581,7 +581,7 @@ div[data-virtuoso-scroller='true'] table {
   canvas {
     pointer-events: none;
   }
-  overflow: visible;
+  /* overflow: visible; */
   .node {
     cursor: pointer;
   }
